# BackEnd

./: .env.example  .gitignore  .pylintrc  README.md  alembic.ini  anon.session  docker-compose.dev.yml  pyproject.toml  session_name.session
.devcontainer/: devcontainer.json  post-install.sh
app/: channel_watcher.py  main.py  telegram_watcher.py
app/application/: GetAllUsers.py  RegisterChannel.py  get_channel.py  get_profile.py  get_user.py  register_channel.py  register_profile.py  register_user.py  sign_in.py
app/database/: DatabaseConnection.py  IDatabaseConnection.py  database_connection.py  i_database_connection.py  supabase_adapter.py
app/exceptions/: email_already_taken_exception.py  invalid_email_format_exception.py  password_confirmation_dot_not_match_exception.py
app/models/: Channel.py  User.py  channel.py  profile.py  tag.py  tags_channels.py  user.py
app/queue/: i_queue.py  rabbitmq_adapter.py
app/repository/: ChannelRepository.py  ChannelRepositoryDatabase.py  ChannelRepositoryMemory.py  IChannelRepository.py  IUserRepository.py  UserRepository.py  channel_repository.py  channel_repository_database.py  channel_repository_memory.py  i_channel_repository.py  i_profile_repository.py  i_tag_repository.py  ichannel_repository.py  iuser_repository.py  profile_repository_database.py  profile_repository_memory.py  profile_repository_supabase.py  tag_repository_database.py  (+3 more)
docker/: Dockerfile.dev
migrations/: env.py
supabase/: config.toml
tests/: test_register_channel.py  test_register_profile.py  test_register_user.py  test_sign_in.py
(+13 files in other folders)
