[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["VerasNp <vitorveras01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.36.0"
fastapi = {extras = ["standard"], version = "^0.114.1"}
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
email-validator = "^2.2.0"
pylint = "^3.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
